feat: update application branding to "Solara: Your Pocket Communication Coach" and configure Firebase API key logging

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="site name"
-      content="AI Tools App"
+      name="Solara"
+      content="Solara: Your Pocket Communicaion Coach"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>AI Tools App</title>
+    <title>Solara</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
