feat: update branding to "Your MATE" and enhance UI elements for improved user experience

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Your Tax Bot"
-      content="Your Tax Assistant to help answer your tax questions"
+      name="Your MATE"
+      content="Your Mobile Australian Tax Expert - AI-Powered Tax Assistance"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Your Tax Bot</title>
+    <title>Your MATE - Mobile Australian Tax Expert</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
